--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,7 +97,7 @@ cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
-   background-color: #69d7dbde;
+   background-color: #5bd2d6;
    z-index: 100;
 }
 
